[COMP] Text-field : correction alignement icônes dans boutons

--- a/src/components/FORM_text-fields/main.scss
+++ b/src/components/FORM_text-fields/main.scss
@@ -71,6 +71,7 @@ $inputTextPlus: $inputTextBase + ', input[type="date"]' ;
     }
     .su-input-action {
         @include flexDisplay(); // sert à centrer verticalement l’icône;
+        @include flexJustify(center, center)
         height: $size-button;
         width: $size-button;
         border: none;
